# s5d9_sdk

./: CMakeLists.txt  README.md  conanfile.py
cmake/: s5d9_sdk-config.cmake.in  s7g2_sdk-config.cmake.in
synergy/board/s5d9_pk/: bsp.h  bsp_ethernet_phy.h  bsp_init.c  bsp_init.h  bsp_leds.c  bsp_leds.h  bsp_qspi.c  bsp_qspi.h
synergy/ssp/inc/driver/api/: r_adc_api.h  r_aes_api.h  r_analog_connect_api.h  r_arc4_api.h  r_cac_api.h  r_can_api.h  r_comparator_api.h  r_crc_api.h  r_crypto_api.h  r_ctsuv2_api.h  r_dac_api.h  r_display_api.h  r_doc_api.h  r_dsa_api.h  r_ecc_api.h  r_flash_api.h  r_hash_api.h  r_i2c_api.h  r_i2s_api.h  r_jpeg_decode_api.h  r_jpeg_encode_api.h  r_key_installation_api.h  r_keymatrix_api.h  r_lpmv2_api.h  r_lvd_api.h  r_opamp_api.h  r_pdc_api.h  r_ptp_api.h  r_ptpedmac_api.h  r_qspi_api.h  r_rsa_api.h  r_rtc_api.h  r_sdmmc_api.h  r_slcdc_api.h  r_spi_api.h  r_tdes_api.h  r_trng_api.h  r_wdt_api.h
synergy/ssp/inc/driver/instances/: r_acmphs.h  r_acmplp.h  r_adc.h  r_agt.h  r_agt_input_capture.h  r_analog_connect.h  r_cac.h  r_can.h  r_crc.h  r_ctsuv2.h  r_dac.h  r_dac8.h  r_dmac.h  r_doc.h  r_dtc.h  r_flash_hp.h  r_flash_lp.h  r_glcd.h  r_gpt_input_capture.h  r_iwdt.h  r_jpeg_decode.h  r_jpeg_encode.h  r_kint.h  r_lpmv2_s124.h  r_lpmv2_s128.h  r_lpmv2_s1ja.h  r_lpmv2_s3a1.h  r_lpmv2_s3a3.h  r_lpmv2_s3a6.h  r_lpmv2_s3a7.h  r_lpmv2_s5d3.h  r_lpmv2_s5d5.h  r_lpmv2_s5d9.h  r_lpmv2_s7g2.h  r_lvd.h  r_opamp.h  r_pdc.h  r_ptp.h  r_ptpedmac.h  r_qspi.h  (+21 more)
synergy/ssp/src/bsp/mcu/s5d9/: bsp_analog.h  bsp_cache.c  bsp_cache.h  bsp_clocks.c  bsp_elc.h  bsp_feature.c  bsp_group_irq.c  bsp_hw_locks.c  bsp_mcu_info.h  bsp_module_stop.c  bsp_rom_registers.c
synergy/ssp/src/driver/r_acmphs/: r_acmphs.c  r_acmphs_private_api.h
synergy/ssp/src/driver/r_acmphs/hw/: hw_acmphs_private.h
synergy/ssp/src/driver/r_acmplp/: r_acmplp.c  r_acmplp_private_api.h
synergy/ssp/src/driver/r_acmplp/hw/: hw_acmplp_private.h
synergy/ssp/src/driver/r_adc/: r_adc.c  r_adc_private_api.h
synergy/ssp/src/driver/r_adc/hw/: hw_adc_private.h
synergy/ssp/src/driver/r_agt/: r_agt.c  r_agt_private.h  r_agt_private_api.h
synergy/ssp/src/driver/r_agt/hw/: hw_agt_private.h
synergy/ssp/src/driver/r_agt_input_capture/: r_agt_input_capture.c  r_agt_input_capture_private_api.h
synergy/ssp/src/driver/r_agt_input_capture/hw/: hw_agt_private.h
synergy/ssp/src/driver/r_analog_connect/: r_analog_connect.c  r_analog_connect_private_api.h
synergy/ssp/src/driver/r_cac/: r_cac.c  r_cac.dox  r_cac_private.h  r_cac_private_api.h
synergy/ssp/src/driver/r_can/: r_can.c  r_can_private_api.h
synergy/ssp/src/driver/r_crc/: r_crc.c  r_crc_private.h  r_crc_private_api.h
synergy/ssp/src/driver/r_ctsuv2/: r_ctsuv2.c  r_ctsuv2_private_api.h
synergy/ssp/src/driver/r_dac/: r_dac.c  r_dac_private.h  r_dac_private_api.h
synergy/ssp/src/driver/r_dac8/: r_dac8.c  r_dac8_private.h  r_dac8_private_api.h
synergy/ssp/src/driver/r_dmac/: r_dmac.c  r_dmac_private_api.h
synergy/ssp/src/driver/r_doc/: r_doc.c  r_doc_private_api.h
synergy/ssp/src/driver/r_dtc/: r_dtc.c  r_dtc_private_api.h
synergy/ssp/src/driver/r_flash_hp/: r_flash_hp.c  r_flash_hp_private_api.h
synergy/ssp/src/driver/r_flash_lp/: r_flash_lp.c  r_flash_lp_private_api.h
synergy/ssp/src/driver/r_glcd/: r_glcd.c  r_glcd_private.h  r_glcd_private_api.h
synergy/ssp/src/driver/r_gpt_input_capture/: r_gpt_input_capture.c  r_gpt_input_capture_private_api.h
synergy/ssp/src/driver/r_iwdt/: r_iwdt.c  r_iwdt_private.h  r_iwdt_private_api.h
synergy/ssp/src/driver/r_jpeg_common/: r_jpeg_common.c  r_jpeg_common.h
synergy/ssp/src/driver/r_jpeg_decode/: r_jpeg_decode.c  r_jpeg_decode_private.h  r_jpeg_decode_private_api.h
synergy/ssp/src/driver/r_jpeg_encode/: r_jpeg_encode.c  r_jpeg_encode_private_api.h
synergy/ssp/src/driver/r_kint/: r_kint.c  r_kint_private.h  r_kint_private_api.h
synergy/ssp/src/driver/r_lpmv2_s124/: r_lpmv2.c
synergy/ssp/src/driver/r_lpmv2_s128/: r_lpmv2.c  r_lpmv2_private_api.h
synergy/ssp/src/driver/r_lpmv2_s1ja/: r_lpmv2.c
synergy/ssp/src/driver/r_lpmv2_s3a1/: r_lpmv2.c
synergy/ssp/src/driver/r_lpmv2_s3a3/: r_lpmv2.c
synergy/ssp/src/driver/r_lpmv2_s3a6/: r_lpmv2.c  r_lpmv2_private_api.h
synergy/ssp/src/driver/r_lpmv2_s3a7/: r_lpmv2.c
synergy/ssp/src/driver/r_lpmv2_s5d3/: r_lpmv2.c
synergy/ssp/src/driver/r_lpmv2_s5d5/: r_lpmv2.c
synergy/ssp/src/driver/r_lpmv2_s5d9/: r_lpmv2.c
synergy/ssp/src/driver/r_lpmv2_s7g2/: r_lpmv2.c
synergy/ssp/src/driver/r_lvd/: r_lvd.c  r_lvd_private_api.h
synergy/ssp/src/driver/r_opamp/: r_opamp.c  r_opamp_private_api.h
synergy/ssp/src/driver/r_pdc/: r_pdc.c  r_pdc_private.h  r_pdc_private_api.h
synergy/ssp/src/driver/r_ptp/: r_ptp.c  r_ptp_private.h  r_ptp_private_api.h
synergy/ssp/src/driver/r_ptpedmac/: r_ptpedmac.c  r_ptpedmac_private.h  r_ptpedmac_private_api.h
synergy/ssp/src/driver/r_qspi/: r_qspi.c  r_qspi_private.h  r_qspi_private_api.h
synergy/ssp/src/driver/r_riic/: r_riic.c  r_riic_private.h  r_riic_private_api.h
synergy/ssp/src/driver/r_riic_slave/: r_riic_slave.c  r_riic_slave_private.h  r_riic_slave_private_api.h
synergy/ssp/src/driver/r_rspi/: r_rspi.c  r_rspi_private.h  r_rspi_private_api.h
synergy/ssp/src/driver/r_rtc/: r_rtc.c  r_rtc_private.h  r_rtc_private_api.h
synergy/ssp/src/driver/r_sci_i2c/: r_sci_i2c.c  r_sci_i2c_private_api.h
synergy/ssp/src/driver/r_sci_spi/: r_sci_spi.c  r_sci_spi_private_api.h
synergy/ssp/src/driver/r_sdadc/: r_sdadc.c  r_sdadc_private_api.h
synergy/ssp/src/driver/r_sdmmc/: r_sdmmc.c  r_sdmmc_private_api.h  sdcard.h  sdhi.h
synergy/ssp/src/driver/r_slcdc/: r_slcdc.c  r_slcdc_private.h  r_slcdc_private_api.h
synergy/ssp/src/driver/r_ssi/: r_ssi.c  r_ssi_private_api.h
synergy/ssp/src/driver/r_wdt/: r_wdt.c  r_wdt_private.h  r_wdt_private_api.h
synergy_cfg/ssp_cfg/bsp/: R7FS7G27G2A01CBD.csv  bsp_board_cfg.h  bsp_cfg.h  bsp_clock_cfg.h  bsp_mcu_device_cfg.h  bsp_mcu_device_pn_cfg.h  bsp_mcu_family_cfg.h
synergy_gen/: common_data.c  common_data.h  hal_data.h
(+97 files in other folders)
